change the trunnel of iris and uptick

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     </div>
                     <div class="paramsList">
                         <div class="params">sourceChannel</div>
-                        <input type="text" class="inputValue" id="channel1" value="channel-65" >
+                        <input type="text" class="inputValue" id="channel1" value="channel-66" >
                     </div>
                     <div class="paramsList">
                         <div class="params">classId</div>
@@ -136,15 +136,15 @@
                     </div>
                     <div class="paramsList">
                         <div class="params">sourceChannel</div>
-                        <input type="text" class="inputValue" id="channel4" value="channel-5" >
+                        <input type="text" class="inputValue" id="channel4" value="channel-7" >
                     </div>
                     <div class="paramsList">
                         <div class="params">classId</div>
-                        <input type="text" class="inputValue" id="classId4" value="ibc/09A8CDD3030BE05E4003D78278931E7EE32D12D94A2853D514EDC8EADCCC003F">
+                        <input type="text" class="inputValue" id="classId4" value="uptick302c99e21024a3f99caf340fbc8947e8">
                     </div>
                     <div class="paramsList">
                         <div class="params">tokenIdsList</div>
-                        <input type="text" class="inputValue" id="tokenIdsList4" value="id001">
+                        <input type="text" class="inputValue" id="tokenIdsList4" value="uptick51712b8fd77c01a5">
                     </div>
                     <div class="paramsList">
                         <div class="params">sender</div>
